NOTICK: Resolve simple warings in flask plugin. (#382)